# voter-stake-registry

./: Anchor.toml  CHANGELOG.md  Cargo.toml  README.md  package.json  run-release.sh
.github/workflows/: ci-lint-test.yml  ci-soteria.yml  ci-soteria.yml.tmp
cli/: Cargo.toml
cli/src/: decode.rs
examples/: example.ts
programs/voter-stake-registry/: Cargo.toml
programs/voter-stake-registry/src/: constants.rs  error.rs  governance.rs  lib.rs
programs/voter-stake-registry/src/instructions/: clawback.rs  close_deposit_entry.rs  close_voter.rs  configure_voting_mint.rs  create_deposit_entry.rs  create_voter.rs  deposit.rs  grant.rs  internal_transfer_locked.rs  log_voter_info.rs  reset_lockup.rs  set_time_offset.rs  withdraw.rs
programs/voter-stake-registry/src/state/: deposit_entry.rs  lockup.rs  registrar.rs  voter.rs
programs/voter-stake-registry/src/tools/: mod.rs  spl_token.rs
programs/voter-stake-registry/tests/: test_all_deposits.rs  test_basic.rs  test_clawback.rs  test_deposit_cliff.rs  test_deposit_constant.rs  test_deposit_daily_vesting.rs  test_deposit_monthly_vesting.rs  test_deposit_no_locking.rs  test_grants.rs  test_internal_transfer.rs  test_log_voter_info.rs  test_reset_lockup.rs  test_voting.rs
programs/voter-stake-registry/tests/program_test/: addin.rs  cookies.rs  governance.rs  mod.rs  solana.rs
src/: client.ts  voter_stake_registry.json  voter_stake_registry.ts
