[package]
name = "voter-stake-registry"
version = "0.2.5"
description = "a voter weight plugin for spl-governance"
license = "GPL-3.0-or-later"
homepage = "https://github.com/blockworks-foundation/voter-stake-registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "voter_stake_registry"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
localnet = []
test-sbf = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0" }
bytemuck = {version = "1.9.1", features = ["derive", "min_const_generics"]}
spl-governance = { version = "4.0", features = [ "no-entrypoint" ] }
spl-governance-addin-api  = { version = "0.1.4" }
static_assertions = "1.1"
solana-program = "1.18.26"

[dev-dependencies]
solana-sdk = "1.18.26"
solana-program = "1.18.26"
solana-program-test = "^1.18.26"
borsh = "0.10.4"
solana-logger = "^1.18.26"
spl-associated-token-account = { version = "^3.0.2", features = ["no-entrypoint"] }
spl-transfer-hook-example = { version = "0.6.0", features = ["no-entrypoint"] }
bytemuck = {version = "1.9.1", features = ["derive", "min_const_generics"]}
serde = "^1.0.219"
bincode = "^1.3.1"
log = "0.4.14"
env_logger = "0.9.0"
base64 = "0.13.0"