[package]
name = "voter-stake-registry"
version = "0.3.1"
description = "a voter weight plugin for spl-governance"
license = "GPL-3.0-or-later"
homepage = "https://github.com/blockworks-foundation/voter-stake-registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "voter_stake_registry"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
localnet = []
test-sbf = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1" }
bytemuck = {version = "1.9.1", features = ["derive", "min_const_generics"]}
spl-governance = { git = "https://github.com/Mythic-Project/solana-program-library", branch = "governance-v3.1.2", features = [ "no-entrypoint" ] }
spl-governance-addin-api  = { git = "https://github.com/Mythic-Project/solana-program-library", branch = "governance-v3.1.2" }
static_assertions = "1.1"
spl-transfer-hook-interface = "0.10.0"

[dev-dependencies]
solana-sdk = "=2.2.1"
solana-program = "=2.2.1"
solana-program-test = "=2.2.1"
borsh = "0.10.4"
solana-logger = "=2.2.1"
getrandom = { version = "=0.2.10", features = ["custom"] }
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "^7.0.0", features = [
    "no-entrypoint",
] }
serde = "^1.0.219"
bincode = "^1.3.1"
log = "0.4.14"
env_logger = "0.9.0"
base64 = "0.13.0"
